--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,10 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	RewriteBase /
+
+	RewriteCond ${HTTPS} off
+	RewriteRule (.*) https://${HTTP_HOST}/$1 [R=301,L]
+
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule ^ index.php [L]
