--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,8 +2,8 @@
 	RewriteEngine On
 	RewriteBase /
 
-	RewriteCond ${HTTPS} off
-	RewriteRule (.*) https://${HTTP_HOST}/$1 [R=301,L]
+	RewriteCond %{HTTPS} off
+	RewriteRule (.*) https://%{HTTP_HOST}/$1 [R=301,L]
 
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
