--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,6 +2,9 @@
 	RewriteEngine On
 	RewriteBase /
 
+	RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+	RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
 	RewriteCond %{HTTPS} off
 	RewriteRule (.*) https://%{HTTP_HOST}/$1 [R=301,L]
 
