--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/dist/App.js": "/dist/App.js?id=dd64b2e193bc7de458d8",
+    "/dist/App.js": "/dist/App.js?id=436f2d0e048be47aaeb1",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
-    "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=0d1ce9a1e9d62d560ee1",
+    "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=9e77702eda44cbede567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
     "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=a258768133b792b8589e",
     "/dist/css/StoreReviewList.css": "/dist/css/StoreReviewList.css?id=cd52c5e3fc3a1bf58185",
@@ -23,9 +23,10 @@
     "/dist/css/StoreManagerTabOrderListPage.css": "/dist/css/StoreManagerTabOrderListPage.css?id=3bb1c33faaa6d07eac88",
     "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=165500d871a6d0454886",
     "/dist/css/StoreUserSNSList.css": "/dist/css/StoreUserSNSList.css?id=25ec7e6f00a429386912",
-    "/dist/App.js.map": "/dist/App.js.map?id=8a0febb1b1035a5410a2",
+    "/dist/css/StoreHomeStoreListItem.css": "/dist/css/StoreHomeStoreListItem.css?id=127b92deb23e539222ff",
+    "/dist/App.js.map": "/dist/App.js.map?id=c91a8f916fd4635be9be",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
-    "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=b8c8ca0fdd47df7f9cda",
+    "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=d04961009a034d0d581e",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
     "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=2a23af075df31db38408",
     "/dist/css/StoreReviewList.css.map": "/dist/css/StoreReviewList.css.map?id=f607b5863173b0b15aac",
@@ -46,5 +47,6 @@
     "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=6b2780c972df1d9c0d80",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
     "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=3bfa78b6d05b3beae274",
-    "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9"
+    "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9",
+    "/dist/css/StoreHomeStoreListItem.css.map": "/dist/css/StoreHomeStoreListItem.css.map?id=508cbf9af0c32924d83f"
 }
