--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=665412cccf15f9a05554",
+    "/dist/App.js": "/dist/App.js?id=96fb36b06e56c222918a",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=9e77702eda44cbede567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
@@ -16,7 +16,7 @@
     "/dist/css/MyContentsPage.css": "/dist/css/MyContentsPage.css?id=80329af84774add6a400",
     "/dist/css/StoreManager.css": "/dist/css/StoreManager.css?id=0bbde8d0c14649cd03e7",
     "/dist/css/StoreManagerTabAskOrderListPage.css": "/dist/css/StoreManagerTabAskOrderListPage.css?id=795da51758eb6046038a",
-    "/dist/css/FileUploader.css": "/dist/css/FileUploader.css?id=07152cf693d64a209dc6",
+    "/dist/css/FileUploader.css": "/dist/css/FileUploader.css?id=6a918420f7e9e5877e1b",
     "/dist/css/StoreManagerTabStoreInfoPage.css": "/dist/css/StoreManagerTabStoreInfoPage.css?id=954880a1b41fbd1ef1b0",
     "/dist/css/StoreManagerTabItemPage.css": "/dist/css/StoreManagerTabItemPage.css?id=3569e159160ae52aa31c",
     "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=89a81cf66aff281e9565",
@@ -24,7 +24,9 @@
     "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=165500d871a6d0454886",
     "/dist/css/StoreUserSNSList.css": "/dist/css/StoreUserSNSList.css?id=25ec7e6f00a429386912",
     "/dist/css/StoreHomeStoreListItem.css": "/dist/css/StoreHomeStoreListItem.css?id=907a995df2b8b8c37e45",
-    "/dist/App.js.map": "/dist/App.js.map?id=063e9252a8b24fc49978",
+    "/dist/css/Popup_progress.css": "/dist/css/Popup_progress.css?id=d5aa38dc278a46bb3893",
+    "/dist/css/Popup_image_preview.css": "/dist/css/Popup_image_preview.css?id=ca36cd487def4ecd5ac4",
+    "/dist/App.js.map": "/dist/App.js.map?id=19048a54e0716b842719",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=d04961009a034d0d581e",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
@@ -41,12 +43,14 @@
     "/dist/css/MyContentsPage.css.map": "/dist/css/MyContentsPage.css.map?id=75789e9e22723ad83a11",
     "/dist/css/StoreManager.css.map": "/dist/css/StoreManager.css.map?id=6b43c38428b0505f12f2",
     "/dist/css/StoreManagerTabAskOrderListPage.css.map": "/dist/css/StoreManagerTabAskOrderListPage.css.map?id=19dd558151080f0c1dbe",
-    "/dist/css/FileUploader.css.map": "/dist/css/FileUploader.css.map?id=d983087ead15bb604656",
+    "/dist/css/FileUploader.css.map": "/dist/css/FileUploader.css.map?id=1fce684ff7aa026e4a46",
     "/dist/css/StoreManagerTabStoreInfoPage.css.map": "/dist/css/StoreManagerTabStoreInfoPage.css.map?id=5147e48d632ac28c3987",
     "/dist/css/StoreManagerTabItemPage.css.map": "/dist/css/StoreManagerTabItemPage.css.map?id=0976e931250e049781ce",
     "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=6b2780c972df1d9c0d80",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
     "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=3bfa78b6d05b3beae274",
     "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9",
-    "/dist/css/StoreHomeStoreListItem.css.map": "/dist/css/StoreHomeStoreListItem.css.map?id=9446ba4fa8c0a8174df8"
+    "/dist/css/StoreHomeStoreListItem.css.map": "/dist/css/StoreHomeStoreListItem.css.map?id=9446ba4fa8c0a8174df8",
+    "/dist/css/Popup_progress.css.map": "/dist/css/Popup_progress.css.map?id=b5811020c74535b45fd2",
+    "/dist/css/Popup_image_preview.css.map": "/dist/css/Popup_image_preview.css.map?id=f8853034c708eb7b5e10"
 }
