--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ramonak/react-progress-bar": "^1.1.1",
     "array-random": "0.0.1",
     "axios": "^0.20.0",
+    "browser-image-compression": "^1.0.13",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react-images-upload": "^1.2.8",
