--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.10.4",
     "cross-env": "^7.0.2",
-    "dotenv-webpack": "^3.0.0",
+    "dotenv-webpack": "^6.0.0",
     "gulp": "^3.8.8",
     "laravel-elixir": "*",
     "laravel-mix": "^5.0.6",
@@ -49,6 +49,8 @@
     "browser-image-compression": "^1.0.13",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "quill": "^1.3.7",
+    "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.1.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
