--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=b9cb5a658c517df0357f",
+    "/dist/App.js": "/dist/App.js?id=139147f8afdf873cab60",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=9e77702eda44cbede567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
@@ -30,7 +30,8 @@
     "/dist/css/StoreContentConfirm.css": "/dist/css/StoreContentConfirm.css?id=92358b758b54f64c22c4",
     "/dist/css/Popup_text_viewer.css": "/dist/css/Popup_text_viewer.css?id=15ba5c6f29a72df9516a",
     "/dist/css/StoreISPOrderComplitePage.css": "/dist/css/StoreISPOrderComplitePage.css?id=02141286380e3762e785",
-    "/dist/App.js.map": "/dist/App.js.map?id=e8f23f44b55c450c1521",
+    "/dist/css/EventStorePlanning.css": "/dist/css/EventStorePlanning.css?id=331cc5bcaea14eccda1b",
+    "/dist/App.js.map": "/dist/App.js.map?id=2cb3cd4407b3ab7edaaf",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=d04961009a034d0d581e",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
@@ -60,5 +61,6 @@
     "/dist/css/Popup_text_editor.css.map": "/dist/css/Popup_text_editor.css.map?id=b0ea107533303e81b018",
     "/dist/css/StoreContentConfirm.css.map": "/dist/css/StoreContentConfirm.css.map?id=3bad136a8a29cbc5e350",
     "/dist/css/Popup_text_viewer.css.map": "/dist/css/Popup_text_viewer.css.map?id=df49889e3936a58b7eb6",
-    "/dist/css/StoreISPOrderComplitePage.css.map": "/dist/css/StoreISPOrderComplitePage.css.map?id=1aeb95b3489b8b3b734b"
+    "/dist/css/StoreISPOrderComplitePage.css.map": "/dist/css/StoreISPOrderComplitePage.css.map?id=1aeb95b3489b8b3b734b",
+    "/dist/css/EventStorePlanning.css.map": "/dist/css/EventStorePlanning.css.map?id=b8174a1daed987ecc255"
 }
