이벤트 기획전 기능 개발

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=0a38fee523ba0bec461e",
+    "/dist/App.js": "/dist/App.js?id=77a5d94065b6b8140935",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=9e77702eda44cbede567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
@@ -30,8 +30,8 @@
     "/dist/css/StoreContentConfirm.css": "/dist/css/StoreContentConfirm.css?id=92358b758b54f64c22c4",
     "/dist/css/Popup_text_viewer.css": "/dist/css/Popup_text_viewer.css?id=15ba5c6f29a72df9516a",
     "/dist/css/StoreISPOrderComplitePage.css": "/dist/css/StoreISPOrderComplitePage.css?id=02141286380e3762e785",
-    "/dist/css/EventStorePlanning.css": "/dist/css/EventStorePlanning.css?id=43d72d2dcc76ca6ae9fd",
-    "/dist/App.js.map": "/dist/App.js.map?id=846aad5096db1ce98fd4",
+    "/dist/css/EventPage.css": "/dist/css/EventPage.css?id=d1c1b470fb25347b48b5",
+    "/dist/App.js.map": "/dist/App.js.map?id=ad8ba7c740471cee3e2b",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=d04961009a034d0d581e",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
@@ -62,5 +62,5 @@
     "/dist/css/StoreContentConfirm.css.map": "/dist/css/StoreContentConfirm.css.map?id=3bad136a8a29cbc5e350",
     "/dist/css/Popup_text_viewer.css.map": "/dist/css/Popup_text_viewer.css.map?id=df49889e3936a58b7eb6",
     "/dist/css/StoreISPOrderComplitePage.css.map": "/dist/css/StoreISPOrderComplitePage.css.map?id=1aeb95b3489b8b3b734b",
-    "/dist/css/EventStorePlanning.css.map": "/dist/css/EventStorePlanning.css.map?id=620f7d7437d116e2e526"
+    "/dist/css/EventPage.css.map": "/dist/css/EventPage.css.map?id=86c652f417a1e85d8e8c"
 }
