--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,9 @@
 {
-    "/dist/App.js": "/dist/App.js?id=ebaeec2eaf2a945b5a5f",
+    "/dist/App.js": "/dist/App.js?id=77016fc7a8343f1e16d0",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=9e77702eda44cbede567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
-    "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=a258768133b792b8589e",
+    "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=99d7d7f2e08cb2f6fef5",
     "/dist/css/StoreReviewList.css": "/dist/css/StoreReviewList.css?id=cd52c5e3fc3a1bf58185",
     "/dist/css/StoreReviewItem.css": "/dist/css/StoreReviewItem.css?id=877ac217a6dc2caf50a1",
     "/dist/css/ReviewWritePage.css": "/dist/css/ReviewWritePage.css?id=2bd9bd199a338afed7f5",
@@ -11,7 +11,7 @@
     "/dist/css/StoreOrderPage.css": "/dist/css/StoreOrderPage.css?id=52dc3e68e6b0d4c3b9f5",
     "/dist/css/StoreOrderItem.css": "/dist/css/StoreOrderItem.css?id=28dfff8eea4e56236854",
     "/dist/css/StoreOrderComplitePage.css": "/dist/css/StoreOrderComplitePage.css?id=56a2597180fbd590eb09",
-    "/dist/css/StoreReceiptItem.css": "/dist/css/StoreReceiptItem.css?id=c15e8a2a054a8bd9dc02",
+    "/dist/css/StoreReceiptItem.css": "/dist/css/StoreReceiptItem.css?id=b57331237a4a73b07f27",
     "/dist/css/StoreDetailReceipt.css": "/dist/css/StoreDetailReceipt.css?id=425b8299d93f5cb6c8f2",
     "/dist/css/MyContentsPage.css": "/dist/css/MyContentsPage.css?id=80329af84774add6a400",
     "/dist/css/StoreManager.css": "/dist/css/StoreManager.css?id=0bbde8d0c14649cd03e7",
@@ -31,11 +31,12 @@
     "/dist/css/Popup_text_viewer.css": "/dist/css/Popup_text_viewer.css?id=15ba5c6f29a72df9516a",
     "/dist/css/StoreISPOrderComplitePage.css": "/dist/css/StoreISPOrderComplitePage.css?id=02141286380e3762e785",
     "/dist/css/EventPage.css": "/dist/css/EventPage.css?id=e9da16574862416e7350",
-    "/dist/App.js.map": "/dist/App.js.map?id=36b59fe02ac8850c44c4",
+    "/dist/css/StoreStateProcess.css": "/dist/css/StoreStateProcess.css?id=912acc9bb2b14085beea",
+    "/dist/App.js.map": "/dist/App.js.map?id=00a56066f6c7f42bf950",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=d04961009a034d0d581e",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
-    "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=2a23af075df31db38408",
+    "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=049197df02353a88d0dc",
     "/dist/css/StoreReviewList.css.map": "/dist/css/StoreReviewList.css.map?id=f607b5863173b0b15aac",
     "/dist/css/StoreReviewItem.css.map": "/dist/css/StoreReviewItem.css.map?id=51fb1b8cb144698476c8",
     "/dist/css/ReviewWritePage.css.map": "/dist/css/ReviewWritePage.css.map?id=d67f4f58d6b467b25ec8",
@@ -43,7 +44,7 @@
     "/dist/css/StoreOrderPage.css.map": "/dist/css/StoreOrderPage.css.map?id=2e32bddb874ec2e16b7c",
     "/dist/css/StoreOrderItem.css.map": "/dist/css/StoreOrderItem.css.map?id=446220ee9e60200526da",
     "/dist/css/StoreOrderComplitePage.css.map": "/dist/css/StoreOrderComplitePage.css.map?id=c54225432e11c311892d",
-    "/dist/css/StoreReceiptItem.css.map": "/dist/css/StoreReceiptItem.css.map?id=5b4a9d7a48a8cdbcdec9",
+    "/dist/css/StoreReceiptItem.css.map": "/dist/css/StoreReceiptItem.css.map?id=5cccec4ce25416a4a4f1",
     "/dist/css/StoreDetailReceipt.css.map": "/dist/css/StoreDetailReceipt.css.map?id=d407a7bb56b95adfa9eb",
     "/dist/css/MyContentsPage.css.map": "/dist/css/MyContentsPage.css.map?id=75789e9e22723ad83a11",
     "/dist/css/StoreManager.css.map": "/dist/css/StoreManager.css.map?id=6b43c38428b0505f12f2",
@@ -62,5 +63,6 @@
     "/dist/css/StoreContentConfirm.css.map": "/dist/css/StoreContentConfirm.css.map?id=3bad136a8a29cbc5e350",
     "/dist/css/Popup_text_viewer.css.map": "/dist/css/Popup_text_viewer.css.map?id=df49889e3936a58b7eb6",
     "/dist/css/StoreISPOrderComplitePage.css.map": "/dist/css/StoreISPOrderComplitePage.css.map?id=1aeb95b3489b8b3b734b",
-    "/dist/css/EventPage.css.map": "/dist/css/EventPage.css.map?id=5d0ff5b270a6a134881c"
+    "/dist/css/EventPage.css.map": "/dist/css/EventPage.css.map?id=5d0ff5b270a6a134881c",
+    "/dist/css/StoreStateProcess.css.map": "/dist/css/StoreStateProcess.css.map?id=903bad447abb5917ef47"
 }
