아이템 디테일 페이지 개선

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=744bd68950c6366bdeb4",
+    "/dist/App.js": "/dist/App.js?id=4fd2dfc8302a1277df87",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=cdb6723d1e910bb3e567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=3f5e557f88f468ff247e",
@@ -7,7 +7,7 @@
     "/dist/css/StoreReviewList.css": "/dist/css/StoreReviewList.css?id=cd52c5e3fc3a1bf58185",
     "/dist/css/StoreReviewItem.css": "/dist/css/StoreReviewItem.css?id=877ac217a6dc2caf50a1",
     "/dist/css/ReviewWritePage.css": "/dist/css/ReviewWritePage.css?id=2bd9bd199a338afed7f5",
-    "/dist/css/StoreItemDetailPage.css": "/dist/css/StoreItemDetailPage.css?id=22c92fe87679e1c11dc7",
+    "/dist/css/StoreItemDetailPage.css": "/dist/css/StoreItemDetailPage.css?id=59e7cc9401e33f30632c",
     "/dist/css/StoreOrderPage.css": "/dist/css/StoreOrderPage.css?id=2d3a7340b8e319ccbd55",
     "/dist/css/StoreOrderItem.css": "/dist/css/StoreOrderItem.css?id=28dfff8eea4e56236854",
     "/dist/css/StoreOrderComplitePage.css": "/dist/css/StoreOrderComplitePage.css?id=56a2597180fbd590eb09",
@@ -19,7 +19,7 @@
     "/dist/css/FileUploader.css": "/dist/css/FileUploader.css?id=e3f27da29363bf17cb36",
     "/dist/css/StoreManagerTabStoreInfoPage.css": "/dist/css/StoreManagerTabStoreInfoPage.css?id=543b91a807813d7294e5",
     "/dist/css/StoreManagerTabItemPage.css": "/dist/css/StoreManagerTabItemPage.css?id=3569e159160ae52aa31c",
-    "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=f3c0e6e28c8939aa0516",
+    "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=dba3ec3a74dbf958e02b",
     "/dist/css/StoreManagerTabOrderListPage.css": "/dist/css/StoreManagerTabOrderListPage.css?id=3bb1c33faaa6d07eac88",
     "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=0018eeaed97222e7a889",
     "/dist/css/StoreUserSNSList.css": "/dist/css/StoreUserSNSList.css?id=25ec7e6f00a429386912",
@@ -35,7 +35,12 @@
     "/dist/css/StorePlayTimePlan.css": "/dist/css/StorePlayTimePlan.css?id=e9cfdcc299447fc6710f",
     "/dist/css/Popup_SelectTime.css": "/dist/css/Popup_SelectTime.css?id=a813d834822b159bd222",
     "/dist/css/TableComponent.css": "/dist/css/TableComponent.css?id=fbb51ca92a28dd062341",
-    "/dist/App.js.map": "/dist/App.js.map?id=a07b577bff5b981c8ef9",
+    "/dist/css/StoreOtherItems.css": "/dist/css/StoreOtherItems.css?id=75054ac104e090f0c483",
+    "/dist/css/StoreReviewTalk.css": "/dist/css/StoreReviewTalk.css?id=9361443a8b08cc929332",
+    "/dist/css/StoreReviewTalkItem.css": "/dist/css/StoreReviewTalkItem.css?id=3e2ef606d2ecf09b8e3f",
+    "/dist/css/ImageFileUploader.css": "/dist/css/ImageFileUploader.css?id=8d002da3bbcdc68ec403",
+    "/dist/css/Popup_refund.css": "/dist/css/Popup_refund.css?id=bbfed68bcdc9690c9c41",
+    "/dist/App.js.map": "/dist/App.js.map?id=3bd809e6ddcda7a453b1",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=43a79d815d360049fb81",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=91621c217fdaba29ecf2",
@@ -43,7 +48,7 @@
     "/dist/css/StoreReviewList.css.map": "/dist/css/StoreReviewList.css.map?id=f607b5863173b0b15aac",
     "/dist/css/StoreReviewItem.css.map": "/dist/css/StoreReviewItem.css.map?id=51fb1b8cb144698476c8",
     "/dist/css/ReviewWritePage.css.map": "/dist/css/ReviewWritePage.css.map?id=d67f4f58d6b467b25ec8",
-    "/dist/css/StoreItemDetailPage.css.map": "/dist/css/StoreItemDetailPage.css.map?id=dc23c74a831048cad53e",
+    "/dist/css/StoreItemDetailPage.css.map": "/dist/css/StoreItemDetailPage.css.map?id=7a9b1f43fffea547084e",
     "/dist/css/StoreOrderPage.css.map": "/dist/css/StoreOrderPage.css.map?id=efc7ed9f6da9917c003a",
     "/dist/css/StoreOrderItem.css.map": "/dist/css/StoreOrderItem.css.map?id=446220ee9e60200526da",
     "/dist/css/StoreOrderComplitePage.css.map": "/dist/css/StoreOrderComplitePage.css.map?id=c54225432e11c311892d",
@@ -55,7 +60,7 @@
     "/dist/css/FileUploader.css.map": "/dist/css/FileUploader.css.map?id=7211c7ee94b9cdb8550e",
     "/dist/css/StoreManagerTabStoreInfoPage.css.map": "/dist/css/StoreManagerTabStoreInfoPage.css.map?id=eac9a80eacf251c7f27c",
     "/dist/css/StoreManagerTabItemPage.css.map": "/dist/css/StoreManagerTabItemPage.css.map?id=0976e931250e049781ce",
-    "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=0a48b49ee7d55f8dbfea",
+    "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=aa07bf70bcccb76c5f81",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
     "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=edebbe74c8eb7577fe80",
     "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9",
@@ -70,5 +75,10 @@
     "/dist/css/StoreStateProcess.css.map": "/dist/css/StoreStateProcess.css.map?id=44993dae6946d7e5eba8",
     "/dist/css/StorePlayTimePlan.css.map": "/dist/css/StorePlayTimePlan.css.map?id=a96c7f1e2474d58acd1d",
     "/dist/css/Popup_SelectTime.css.map": "/dist/css/Popup_SelectTime.css.map?id=01a0a9d90d2899fc865a",
-    "/dist/css/TableComponent.css.map": "/dist/css/TableComponent.css.map?id=61d0843414794c89f49b"
+    "/dist/css/TableComponent.css.map": "/dist/css/TableComponent.css.map?id=61d0843414794c89f49b",
+    "/dist/css/StoreOtherItems.css.map": "/dist/css/StoreOtherItems.css.map?id=e7981745d48ecab16988",
+    "/dist/css/StoreReviewTalk.css.map": "/dist/css/StoreReviewTalk.css.map?id=962f437d0d3def63c368",
+    "/dist/css/StoreReviewTalkItem.css.map": "/dist/css/StoreReviewTalkItem.css.map?id=a03aecc7d3a5443e3377",
+    "/dist/css/ImageFileUploader.css.map": "/dist/css/ImageFileUploader.css.map?id=b46617654b33ab2ae06c",
+    "/dist/css/Popup_refund.css.map": "/dist/css/Popup_refund.css.map?id=653886adfed9968b57cd"
 }
