--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "quill": "^1.3.7",
+    "react-alice-carousel": "^2.2.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.1.0",
+    "react-player": "^2.7.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "scrollbooster": "^3.0.2"
