상품 썸네일 크로핑 기능 추가

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,13 +1,13 @@
 {
-    "/dist/App.js": "/dist/App.js?id=3ceb303f89aed7dc00bb",
+    "/dist/App.js": "/dist/App.js?id=4c8627f44a12cb1c6b01",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=cdb6723d1e910bb3e567",
-    "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=2d3dc53fa8a3bd06fadf",
+    "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=5075e3f6cc3aadd9d735",
     "/dist/css/StoreDetailPage.css": "/dist/css/StoreDetailPage.css?id=99d7d7f2e08cb2f6fef5",
     "/dist/css/StoreReviewList.css": "/dist/css/StoreReviewList.css?id=cd52c5e3fc3a1bf58185",
     "/dist/css/StoreReviewItem.css": "/dist/css/StoreReviewItem.css?id=877ac217a6dc2caf50a1",
     "/dist/css/ReviewWritePage.css": "/dist/css/ReviewWritePage.css?id=2bd9bd199a338afed7f5",
-    "/dist/css/StoreItemDetailPage.css": "/dist/css/StoreItemDetailPage.css?id=c082c246834c8de21ae2",
+    "/dist/css/StoreItemDetailPage.css": "/dist/css/StoreItemDetailPage.css?id=002682a857cfd0f149ac",
     "/dist/css/StoreOrderPage.css": "/dist/css/StoreOrderPage.css?id=2d3a7340b8e319ccbd55",
     "/dist/css/StoreOrderItem.css": "/dist/css/StoreOrderItem.css?id=d09b77c4209548a6226c",
     "/dist/css/StoreOrderComplitePage.css": "/dist/css/StoreOrderComplitePage.css?id=56a2597180fbd590eb09",
@@ -19,7 +19,7 @@
     "/dist/css/FileUploader.css": "/dist/css/FileUploader.css?id=543be1fe72d0e0771066",
     "/dist/css/StoreManagerTabStoreInfoPage.css": "/dist/css/StoreManagerTabStoreInfoPage.css?id=543b91a807813d7294e5",
     "/dist/css/StoreManagerTabItemPage.css": "/dist/css/StoreManagerTabItemPage.css?id=3569e159160ae52aa31c",
-    "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=b611bd326dcc82d163bd",
+    "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=8084757337e8b371ca6b",
     "/dist/css/StoreManagerTabOrderListPage.css": "/dist/css/StoreManagerTabOrderListPage.css?id=3bb1c33faaa6d07eac88",
     "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=189ec35c6eb10b15d2df",
     "/dist/css/StoreUserSNSList.css": "/dist/css/StoreUserSNSList.css?id=25ec7e6f00a429386912",
@@ -42,15 +42,16 @@
     "/dist/css/Popup_refund.css": "/dist/css/Popup_refund.css?id=bbfed68bcdc9690c9c41",
     "/dist/css/StoreItemDetailReviewList.css": "/dist/css/StoreItemDetailReviewList.css?id=5cb0158400096b859e7d",
     "/dist/css/StoreItemDetailReviewItem.css": "/dist/css/StoreItemDetailReviewItem.css?id=e5d6ebdd0c68c68650e3",
-    "/dist/App.js.map": "/dist/App.js.map?id=731c2cc64ccd9d778c9e",
+    "/dist/css/ImageCroper.css": "/dist/css/ImageCroper.css?id=dd31b309fddb3eddfb69",
+    "/dist/App.js.map": "/dist/App.js.map?id=780a0cb47ac4e5c61e11",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=43a79d815d360049fb81",
-    "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=5e05ccb2423dcb836f8d",
+    "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=133e209cfd058c7514e9",
     "/dist/css/StoreDetailPage.css.map": "/dist/css/StoreDetailPage.css.map?id=049197df02353a88d0dc",
     "/dist/css/StoreReviewList.css.map": "/dist/css/StoreReviewList.css.map?id=f607b5863173b0b15aac",
     "/dist/css/StoreReviewItem.css.map": "/dist/css/StoreReviewItem.css.map?id=51fb1b8cb144698476c8",
     "/dist/css/ReviewWritePage.css.map": "/dist/css/ReviewWritePage.css.map?id=d67f4f58d6b467b25ec8",
-    "/dist/css/StoreItemDetailPage.css.map": "/dist/css/StoreItemDetailPage.css.map?id=8315e9ffc811d5c8dd3b",
+    "/dist/css/StoreItemDetailPage.css.map": "/dist/css/StoreItemDetailPage.css.map?id=c2603f6c3173d5505e7a",
     "/dist/css/StoreOrderPage.css.map": "/dist/css/StoreOrderPage.css.map?id=efc7ed9f6da9917c003a",
     "/dist/css/StoreOrderItem.css.map": "/dist/css/StoreOrderItem.css.map?id=154116e54196fa49ae3b",
     "/dist/css/StoreOrderComplitePage.css.map": "/dist/css/StoreOrderComplitePage.css.map?id=c54225432e11c311892d",
@@ -62,7 +63,7 @@
     "/dist/css/FileUploader.css.map": "/dist/css/FileUploader.css.map?id=6009d117207f82c8fd83",
     "/dist/css/StoreManagerTabStoreInfoPage.css.map": "/dist/css/StoreManagerTabStoreInfoPage.css.map?id=eac9a80eacf251c7f27c",
     "/dist/css/StoreManagerTabItemPage.css.map": "/dist/css/StoreManagerTabItemPage.css.map?id=0976e931250e049781ce",
-    "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=895d7f4d954f2ee54deb",
+    "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=de31f9380c6fe7468c86",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
     "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=cbe95e8996c4a4d7b81b",
     "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9",
@@ -84,5 +85,6 @@
     "/dist/css/ImageFileUploader.css.map": "/dist/css/ImageFileUploader.css.map?id=5a9adb90018117a271aa",
     "/dist/css/Popup_refund.css.map": "/dist/css/Popup_refund.css.map?id=653886adfed9968b57cd",
     "/dist/css/StoreItemDetailReviewList.css.map": "/dist/css/StoreItemDetailReviewList.css.map?id=ef6ebb3b8906f3991ee9",
-    "/dist/css/StoreItemDetailReviewItem.css.map": "/dist/css/StoreItemDetailReviewItem.css.map?id=a901e0d6e0231d8b8a39"
+    "/dist/css/StoreItemDetailReviewItem.css.map": "/dist/css/StoreItemDetailReviewItem.css.map?id=a901e0d6e0231d8b8a39",
+    "/dist/css/ImageCroper.css.map": "/dist/css/ImageCroper.css.map?id=73b884835db99b4fd5c6"
 }
