--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment-timezone": "^0.5.31",
     "quill": "^1.3.7",
     "react-alice-carousel": "^2.2.1",
+    "react-easy-crop": "^3.3.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.1.0",
     "react-player": "^2.7.2",
