정산 페이지 테스트 및 스토어 관리자 홈 탭 임시 코드

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/dist/App.js": "/dist/App.js?id=a6d01f15abadb873d872",
+    "/dist/App.js": "/dist/App.js?id=c4ce57530e8df0ad50a0",
     "/dist/css/Global.css": "/dist/css/Global.css?id=6e055293139c71244c11",
     "/dist/css/StoreHome.css": "/dist/css/StoreHome.css?id=cdb6723d1e910bb3e567",
     "/dist/css/StoreContentsListItem.css": "/dist/css/StoreContentsListItem.css?id=5075e3f6cc3aadd9d735",
@@ -21,7 +21,7 @@
     "/dist/css/StoreManagerTabItemPage.css": "/dist/css/StoreManagerTabItemPage.css?id=3569e159160ae52aa31c",
     "/dist/css/StoreAddItemPage.css": "/dist/css/StoreAddItemPage.css?id=8084757337e8b371ca6b",
     "/dist/css/StoreManagerTabOrderListPage.css": "/dist/css/StoreManagerTabOrderListPage.css?id=3bb1c33faaa6d07eac88",
-    "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=189ec35c6eb10b15d2df",
+    "/dist/css/StoreManagerTabAccountPage.css": "/dist/css/StoreManagerTabAccountPage.css?id=296da58b229b0b6d826d",
     "/dist/css/StoreUserSNSList.css": "/dist/css/StoreUserSNSList.css?id=25ec7e6f00a429386912",
     "/dist/css/StoreHomeStoreListItem.css": "/dist/css/StoreHomeStoreListItem.css?id=907a995df2b8b8c37e45",
     "/dist/css/Popup_progress.css": "/dist/css/Popup_progress.css?id=d5aa38dc278a46bb3893",
@@ -43,7 +43,9 @@
     "/dist/css/StoreItemDetailReviewList.css": "/dist/css/StoreItemDetailReviewList.css?id=5cb0158400096b859e7d",
     "/dist/css/StoreItemDetailReviewItem.css": "/dist/css/StoreItemDetailReviewItem.css?id=e5d6ebdd0c68c68650e3",
     "/dist/css/ImageCroper.css": "/dist/css/ImageCroper.css?id=dd31b309fddb3eddfb69",
-    "/dist/App.js.map": "/dist/App.js.map?id=098810e25dce61454fbc",
+    "/dist/css/StoreManagerTabHomePage.css": "/dist/css/StoreManagerTabHomePage.css?id=380421cb3fb69f22ad32",
+    "/dist/css/StoreDoIt.css": "/dist/css/StoreDoIt.css?id=e880b347c46c6fa57bd0",
+    "/dist/App.js.map": "/dist/App.js.map?id=693f626f68944cd025cc",
     "/dist/css/Global.css.map": "/dist/css/Global.css.map?id=54e55fa75bede1265500",
     "/dist/css/StoreHome.css.map": "/dist/css/StoreHome.css.map?id=43a79d815d360049fb81",
     "/dist/css/StoreContentsListItem.css.map": "/dist/css/StoreContentsListItem.css.map?id=133e209cfd058c7514e9",
@@ -65,7 +67,7 @@
     "/dist/css/StoreManagerTabItemPage.css.map": "/dist/css/StoreManagerTabItemPage.css.map?id=0976e931250e049781ce",
     "/dist/css/StoreAddItemPage.css.map": "/dist/css/StoreAddItemPage.css.map?id=de31f9380c6fe7468c86",
     "/dist/css/StoreManagerTabOrderListPage.css.map": "/dist/css/StoreManagerTabOrderListPage.css.map?id=2c6cd3d5ebe2b4dd3be3",
-    "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=cbe95e8996c4a4d7b81b",
+    "/dist/css/StoreManagerTabAccountPage.css.map": "/dist/css/StoreManagerTabAccountPage.css.map?id=dc1536356042c6c236b9",
     "/dist/css/StoreUserSNSList.css.map": "/dist/css/StoreUserSNSList.css.map?id=0f77b37ce3d801fb6dd9",
     "/dist/css/StoreHomeStoreListItem.css.map": "/dist/css/StoreHomeStoreListItem.css.map?id=9446ba4fa8c0a8174df8",
     "/dist/css/Popup_progress.css.map": "/dist/css/Popup_progress.css.map?id=b5811020c74535b45fd2",
@@ -86,5 +88,7 @@
     "/dist/css/Popup_refund.css.map": "/dist/css/Popup_refund.css.map?id=653886adfed9968b57cd",
     "/dist/css/StoreItemDetailReviewList.css.map": "/dist/css/StoreItemDetailReviewList.css.map?id=ef6ebb3b8906f3991ee9",
     "/dist/css/StoreItemDetailReviewItem.css.map": "/dist/css/StoreItemDetailReviewItem.css.map?id=a901e0d6e0231d8b8a39",
-    "/dist/css/ImageCroper.css.map": "/dist/css/ImageCroper.css.map?id=73b884835db99b4fd5c6"
+    "/dist/css/ImageCroper.css.map": "/dist/css/ImageCroper.css.map?id=73b884835db99b4fd5c6",
+    "/dist/css/StoreManagerTabHomePage.css.map": "/dist/css/StoreManagerTabHomePage.css.map?id=3d3063affa00c8e8824c",
+    "/dist/css/StoreDoIt.css.map": "/dist/css/StoreDoIt.css.map?id=637ac32ba51a412f29c2"
 }
